[gd_scene load_steps=4 format=2]

[ext_resource path="res://Mouse_Follower.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.9376, 28.9785 )

[sub_resource type="CircleShape2D" id=2]
radius = 3.1104

[node name="Mouse_Follower" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 343

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Building_Preview" type="Sprite" parent="Area2D"]
scale = Vector2( 0.0113696, 0.0151026 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D2_area_exited"]
